// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostEditor renders a new editor correctly 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  keyboardVerticalOffset={110}
>
  <ScrollView
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="never"
    overScrollMode="never"
  >
    <React.Fragment>
      <View>
        <View>
          <TextInput
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            maxLength={50}
            multiline={true}
            numberOfLines={2}
            onChangeText={[Function]}
            placeholder="What's on your mind?"
            placeholderTextColor="#c0c6cd"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View>
          <ForwardRef(HyloEditorWebView)
            customEditorCSS="
                min-height: 90px;
              "
            onAddTopic={[Function]}
            onChange={[Function]}
            placeholder="Add a description"
            readOnly={false}
            widthOffset={0}
          />
        </View>
        <TouchableOpacity
          onPress={[Function]}
        >
          <View>
            <Text>
              Topics
            </Text>
            <View>
              <Icon
                name="Plus"
              />
            </View>
          </View>
          <Topics
            onPress={[Function]}
            topics={[]}
          />
        </TouchableOpacity>
        <TouchableOpacity
          onPress={[Function]}
        >
          <View>
            <Text>
              Location
            </Text>
            <View>
              <Icon
                name="ArrowDown"
              />
            </View>
          </View>
        </TouchableOpacity>
        <TouchableOpacity
          onPress={[Function]}
        >
          <View>
            <Text>
              Post In
            </Text>
            <View>
              <Icon
                name="Plus"
              />
            </View>
          </View>
          <GroupsList
            RemoveIcon={[Function]}
            columns={1}
            groups={[]}
            onPress={[Function]}
            onRemove={[Function]}
          />
        </TouchableOpacity>
        <BottomBar
          announcementEnabled={false}
          onAddImage={[Function]}
          onError={[Function]}
          onShowFilePicker={[Function]}
          toggleAnnouncement={[Function]}
        />
      </View>
    </React.Fragment>
  </ScrollView>
</KeyboardAvoidingView>
`;

exports[`PostEditor renders correctly while saving 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "rgb(242, 242, 242)",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={0}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
        >
          <View
            collapsable={false}
          />
          <View
            accessibilityElementsHidden={true}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="no-hide-descendants"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "none",
                  "overflow": "hidden",
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        onLayout={[Function]}
                      >
                        <RCTScrollView
                          keyboardDismissMode="interactive"
                          keyboardShouldPersistTaps="never"
                          overScrollMode="never"
                        >
                          <View>
                            <View>
                              <View>
                                <TextInput
                                  autoCorrect={false}
                                  blurOnSubmit={true}
                                  editable={false}
                                  maxLength={50}
                                  multiline={true}
                                  numberOfLines={2}
                                  onChangeText={[Function]}
                                  placeholder="What's on your mind?"
                                  placeholderTextColor="#c0c6cd"
                                  underlineColorAndroid="transparent"
                                  value="title of this post"
                                />
                              </View>
                              <View>
                                <View>
                                  <ActivityIndicator
                                    color="#818A88"
                                    size="small"
                                  />
                                </View>
                              </View>
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View>
                                  <Text>
                                    Topics
                                  </Text>
                                  <View>
                                    <Icon
                                      name="Plus"
                                    />
                                  </View>
                                </View>
                              </View>
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View>
                                  <Text>
                                    Location
                                  </Text>
                                  <View>
                                    <Icon
                                      name="ArrowDown"
                                    />
                                  </View>
                                </View>
                              </View>
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View>
                                  <Text>
                                    Post In
                                  </Text>
                                  <View>
                                    <Icon
                                      name="Plus"
                                    />
                                  </View>
                                </View>
                                <View>
                                  <View>
                                    <View
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <View
                                        style={
                                          [
                                            {
                                              "overflow": "hidden",
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <FastImageView
                                          defaultSource={null}
                                          resizeMode="cover"
                                          source={
                                            {
                                              "uri": "https://d3ngex8q79bk55.cloudfront.net/misc/default_community_avatar.png",
                                            }
                                          }
                                          style={
                                            {
                                              "bottom": 0,
                                              "left": 0,
                                              "position": "absolute",
                                              "right": 0,
                                              "top": 0,
                                            }
                                          }
                                        />
                                      </View>
                                      <Text
                                        numberOfLines={1}
                                      >
                                        Group 1
                                      </Text>
                                    </View>
                                    <View
                                      accessible={true}
                                      collapsable={false}
                                      focusable={true}
                                      hitSlop={
                                        {
                                          "bottom": 5,
                                          "left": 5,
                                          "right": 5,
                                          "top": 5,
                                        }
                                      }
                                      onClick={[Function]}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                    >
                                      <Icon
                                        name="Ex"
                                      />
                                    </View>
                                  </View>
                                </View>
                              </View>
                              <View>
                                <View />
                                <View>
                                  <View
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Icon
                                      name="Paperclip"
                                    />
                                  </View>
                                  <View
                                    accessible={true}
                                    collapsable={false}
                                    focusable={true}
                                    hitSlop={
                                      {
                                        "bottom": 5,
                                        "left": 5,
                                        "right": 5,
                                        "top": 5,
                                      }
                                    }
                                    onClick={[Function]}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                  >
                                    <Icon
                                      name="AddImage"
                                    />
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </RCTScrollView>
                      </View>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                    >
                      <View
                        accessibilityElementsHidden={true}
                        importantForAccessibility="no-hide-descendants"
                        onLayout={[Function]}
                        pointerEvents="none"
                        style={null}
                      >
                        <View>
                          <View>
                            <View
                              accessible={true}
                              collapsable={false}
                              focusable={false}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <View
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={
                                  {
                                    "bottom": 7,
                                    "left": 7,
                                    "right": 7,
                                    "top": 7,
                                  }
                                }
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <Icon
                                  color="#c0c6cd"
                                  name="Ex"
                                />
                              </View>
                            </View>
                            <View>
                              <View>
                                <View
                                  accessible={true}
                                  collapsable={false}
                                  focusable={true}
                                  onClick={[Function]}
                                  onResponderGrant={[Function]}
                                  onResponderMove={[Function]}
                                  onResponderRelease={[Function]}
                                  onResponderTerminate={[Function]}
                                  onResponderTerminationRequest={[Function]}
                                  onStartShouldSetResponder={[Function]}
                                  testID="ios_touchable_wrapper"
                                >
                                  <View
                                    pointerEvents="box-only"
                                  >
                                    <TextInput
                                      editable={false}
                                      testID="text_input"
                                      value="DISCUSSION"
                                    />
                                    <View
                                      testID="icon_container"
                                    >
                                      <Icon
                                        name="ArrowDown"
                                      />
                                    </View>
                                  </View>
                                </View>
                                <Modal
                                  hardwareAccelerated={false}
                                  onOrientationChange={[Function]}
                                  supportedOrientations={
                                    [
                                      "portrait",
                                      "landscape",
                                    ]
                                  }
                                  testID="ios_modal"
                                  transparent={true}
                                  visible={false}
                                />
                              </View>
                            </View>
                            <View>
                              <View
                                accessibilityState={
                                  {
                                    "disabled": true,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View>
                                  <View>
                                    <Text>
                                      Saving...
                                    </Text>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
        <RNSScreen
          activityState={2}
          collapsable={false}
          forwardedRef={[Function]}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          pointerEvents="box-none"
        >
          <View
            collapsable={false}
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
            >
              <View
                collapsable={false}
                forwardedRef={[Function]}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "rgb(242, 242, 242)",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    />
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              collapsable={false}
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
              >
                <View
                  accessibilityLabel="MockedScreen, back"
                  accessibilityRole="button"
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                >
                  <Image
                    fadeDuration={0}
                    source={
                      {
                        "testUri": "../../@react-navigation/elements/lib/commonjs/assets/back-icon.png",
                      }
                    }
                    style={
                      [
                        {
                          "height": 21,
                          "marginLeft": 8,
                          "marginRight": 22,
                          "marginVertical": 12,
                          "resizeMode": "contain",
                          "transform": [
                            {
                              "scaleX": 1,
                            },
                          ],
                          "width": 13,
                        },
                        {
                          "marginRight": 6,
                        },
                        {
                          "tintColor": "rgb(0, 122, 255)",
                        },
                      ]
                    }
                  />
                  <View
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "flexDirection": "row",
                        },
                        {
                          "minWidth": 133,
                        },
                      ]
                    }
                  >
                    <Text
                      accessible={false}
                      allowFontScaling={false}
                      collapsable={false}
                      numberOfLines={1}
                      onLayout={[Function]}
                    >
                      MockedScreen
                    </Text>
                  </View>
                </View>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                >
                  Post Details
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PostEditor renders with a post 1`] = `
<KeyboardAvoidingView
  behavior="padding"
  keyboardVerticalOffset={110}
>
  <ScrollView
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="never"
    overScrollMode="never"
  >
    <React.Fragment>
      <View>
        <View>
          <TextInput
            autoCorrect={false}
            blurOnSubmit={true}
            editable={true}
            maxLength={50}
            multiline={true}
            numberOfLines={2}
            onChangeText={[Function]}
            placeholder="What's on your mind?"
            placeholderTextColor="#c0c6cd"
            underlineColorAndroid="transparent"
            value=""
          />
        </View>
        <View>
          <ForwardRef(HyloEditorWebView)
            contentHTML="myDetails"
            customEditorCSS="
                min-height: 90px;
              "
            onAddTopic={[Function]}
            onChange={[Function]}
            placeholder="Add a description"
            readOnly={false}
            widthOffset={0}
          />
        </View>
        <TouchableOpacity
          onPress={[Function]}
        >
          <View>
            <Text>
              Topics
            </Text>
            <View>
              <Icon
                name="Plus"
              />
            </View>
          </View>
          <Topics
            onPress={[Function]}
            topics={[]}
          />
        </TouchableOpacity>
        <TouchableOpacity
          onPress={[Function]}
        >
          <View>
            <Text>
              Location
            </Text>
            <View>
              <Icon
                name="ArrowDown"
              />
            </View>
          </View>
        </TouchableOpacity>
        <TouchableOpacity
          onPress={[Function]}
        >
          <View>
            <Text>
              Post In
            </Text>
            <View>
              <Icon
                name="Plus"
              />
            </View>
          </View>
          <GroupsList
            RemoveIcon={[Function]}
            columns={1}
            groups={
              [
                {
                  "id": 1,
                  "name": "Group 1",
                },
              ]
            }
            onPress={[Function]}
            onRemove={[Function]}
          />
        </TouchableOpacity>
        <BottomBar
          announcementEnabled={false}
          onAddImage={[Function]}
          onError={[Function]}
          onShowFilePicker={[Function]}
          post={
            {
              "details": "myDetails",
              "groups": [
                {
                  "id": 1,
                  "name": "Group 1",
                },
              ],
              "imageUrls": [
                "http://foo.com/foo.png",
                "http://baz.com/baz.png",
              ],
            }
          }
          toggleAnnouncement={[Function]}
        />
      </View>
      <ImageSelector
        images={
          [
            {
              "local": "http://foo.com/foo.png",
              "remote": "http://foo.com/foo.png",
            },
            {
              "local": "http://baz.com/baz.png",
              "remote": "http://baz.com/baz.png",
            },
          ]
        }
        onAdd={[Function]}
        onRemove={[Function]}
        type="post"
      />
    </React.Fragment>
  </ScrollView>
</KeyboardAvoidingView>
`;

exports[`TypeButton renders correctly 1`] = `
<View>
  <RNPickerSelect
    Icon={[Function]}
    InputAccessoryView={null}
    disabled={false}
    doneText="Done"
    fixAndroidTouchableBug={false}
    itemKey={null}
    items={
      [
        {
          "color": "#40A1DD",
          "label": "DISCUSSION",
          "value": "discussion",
        },
        {
          "color": "#664BA5",
          "label": "REQUEST",
          "value": "request",
        },
        {
          "color": "#0DC39F",
          "label": "OFFER",
          "value": "offer",
        },
        {
          "color": "#FFD403",
          "label": "RESOURCE",
          "value": "resource",
        },
        {
          "color": "#FC8000",
          "label": "PROJECT",
          "value": "project",
        },
        {
          "color": "#FE4850",
          "label": "EVENT",
          "value": "event",
        },
      ]
    }
    modalProps={{}}
    onClose={null}
    onDonePress={null}
    onDownArrow={null}
    onOpen={null}
    onUpArrow={null}
    onValueChange={[MockFunction]}
    pickerProps={
      {
        "itemStyle": {
          "backgroundColor": "#FFFFFF",
          "fontSize": 20,
          "fontWeight": "bold",
          "letterSpacing": 2,
        },
      }
    }
    placeholder={
      {
        "color": "#9EA0A4",
        "label": "Select an item...",
        "value": null,
      }
    }
    style={{}}
    textInputProps={{}}
    touchableDoneProps={{}}
    touchableWrapperProps={{}}
    useNativeAndroidPickerStyle={false}
    value="discussion"
  />
</View>
`;
